# Coinflip

./: CMakeLists.txt  ChooseLevelWindow.cpp  ChooseLevelWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyCoin.cpp  MyCoin.h  MyPushButton.cpp  MyPushButton.h  PlayWindow.cpp  PlayWindow.h  README.md  Resource.qrc  dataconfig.cpp  main.cpp
